# knightmare

./: Cargo.toml  README.md
.github/workflows/: coverage.yml
assets/: art.txt
src/: game.rs  lib.rs  magic.rs  main.rs  movegen.rs  tests.rs
